# ccxt-pyodide

./: .gitignore  main.py  pyproject.toml
ccxt-py/: build.ts  deno.json  main.py  main.ts
worker/: package-lock.json  package.json  pyproject.toml  wrangler.jsonc
worker/src/: entry.py  submodule.py
